# CV

./: README.md
lab1-hybrid-image/: configuration.md  report.md
lab1-hybrid-image/build-hybrid-image-gui-Desktop-Debug/: Makefile  hybrid-image-gui  moc_mainwindow.cpp  qrc_rsc.cpp
lab1-hybrid-image/fft/: fft.cpp
lab1-hybrid-image/fft/.history/: fft_20230325165841.cpp  fft_20230325165932.cpp  fft_20230325170418.cpp  fft_20230325170434.cpp  fft_20230325171014.cpp  fft_20230326162231.cpp  fft_20230326162356.cpp  fft_20230326162428.cpp  fft_20230326162509.cpp  fft_20230326162653.cpp  fft_20230326162655.cpp  fft_20230326162828.cpp  fft_20230326162848.cpp  fft_20230326162903.cpp  fft_20230326162937.cpp  fft_20230326163034.cpp  fft_20230326163057.cpp  fft_20230326163117.cpp  fft_20230326163120.cpp
lab1-hybrid-image/from-scratch/: .gitignore  hybrid-image.cpp
lab1-hybrid-image/gui/: readme.md
lab1-hybrid-image/hybrid-image/: CMakeLists.txt  README.md  hybrid-image.cpp  meson.build
lab1-hybrid-image/hybrid-image-gui/: hybrid-image-gui.pro  main.cpp
lab1-hybrid-image/test/: CMakeCache.txt  Makefile  cmake_install.cmake
lab2-canny-edge-detection/: .gitignore  Makefile  report.md
lab2-canny-edge-detection/assets/: double.png~  link.kra~  result.kra  result.kra~  suppress.kra~
lab2-canny-edge-detection/canny/: .gitignore  Makefile  README.md  meson.build
lab2-canny-edge-detection/src/: main.cpp
lab3-feature-matching/: report.md
lab4-feature-extraction/: note.md
lab4-feature-extraction/MySift/: CMakeLists.txt  main.cpp  sift.cpp  sift.h  util.h
lab4-feature-extraction/ref/: .gitignore  reps.md
lab5-depth-estimation/: note.md
lab5-depth-estimation/disparity/: .gitignore  CMakeLists.txt  main.cpp  meson.build  stereo_vision.cpp  stereo_vision.h  stereo_vision.hpp
lab5-depth-estimation/ref/: .gitignore
lab5-depth-estimation/stereo-depth-estimation/: .gitignore  CMakeLists.txt  calibration.py  correspondence.py  main.cpp  main.py  rectify.py  stereo_vision.cpp  stereo_vision.h
(+500 files in other folders)
